# d2d

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.ci.yaml  docker-compose.test.yaml  pyproject.toml  template_profile.yml
.github/workflows/: ci.yaml
app/: errors_queue.py
configs/: config.toml
d2d/: __init__.py  api.py  cli.py  configs.py
d2d/adapters/: factory.py  protocols.py
d2d/api/: __init__.py  document_to_vs.py  documents.py  documents_dispatcher.py  documents_to_graph.py
d2d/app/: logger.py
d2d/cli/: documents_to_graph.py  documents_to_vs.py  main.py  utils.py
d2d/common/: factory.py
d2d/configs/: config.toml
d2d/connectors/: _doc_to_db_model.py  catalog.py  enums.py  factory.py
d2d/contracts/: _types.py  document.py  documents.py  enums.py  exceptions.py  interfaces.py  payload.py  services.py  source.py
d2d/doc_processor/: factory.py
d2d/plugins/: factory.py  interface.py
d2d/protocols/: _document_to_db.py  _extract_image_sources.py
d2d/providers/: factory.py  interface.py  test.py
d2d/source_api/: __init__.py
d2d/source_handlers/: _document_processor.py  _utils.py  sources_to_documents.py
d2d/tasks/: __init__.py  _component_convertors.py  _document_composer.py  _protocols.py  _source_handler.py  _taskspec_handler.py  _utils.py  docs_extract_imgs_ref.py  document_composer.py  document_to_database.py  document_to_vectordb.py  main.py  parsers.py  readme.md  source_handler.py  source_handlers.py  source_to_components.py  taskspec_handler.py  (+1 more)
doc_graph_processor/: api.py
doc_uploader/: api.py  cli.py
docker/: Dockerfile  docker-compose.test.yaml
docs/: folder_structure.md
document-graph-processor/: api.py
obsidian_py_processor/: api.py  model.py  models.py  processors.py
tests/: __init__.py  load_test_files.py  test_db.py  test_markdowns.py  test_obsidian_py_processor.py  test_processors.py
(+239 files in other folders)
