[tool.poetry]
name = "doc_uploader"
version = "0.1.1"
description = ""
authors = ["Toby <40096033+tobytoyin@users.noreply.github.com>"]
packages = [{include = "doc_uploader"}]

[tool.poetry.dependencies]
python = "^3.11"
Markdown = "^3.4.3"
PyYAML = "^6.0.1"
neo4j = "^5.11.0"
pydantic = "^2.1.1"
graphene = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
