[tool.poetry]
name = "d2d"
version = "0.1.2"
description = ""
authors = ["Toby <40096033+tobytoyin@users.noreply.github.com>"]
packages = [{include = "d2d"}]

[tool.poetry.dependencies]
python = "^3.11"
Markdown = "^3.4.3"
PyYAML = "^6.0.1"
neo4j = "^5.11.0"
pydantic = "^2.1.1"
graphene = "^3.3"

# [tool.poetry.group.openai]
# openai =


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pre-commit = "^3.5.0"
pytest = "^7.4.2"
mypy = "^1.6.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
